fixed text-align in project 4

--- a/proj4/assets/style.css
+++ b/proj4/assets/style.css
@@ -127,8 +127,8 @@ body {
     padding-bottom:3%;
 }
 #task-2 {
-    padding-top: 10%;
-text-align: right;
+    padding-top: 3%;
+text-align: center;
 }
 
     /* styling for title */
